# ResumeAnalyzer

./: AdminWidget.cpp  AdminWidget.h  CMakeLists.txt  Job.cpp  Job.h  JobWidget.cpp  JobWidget.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  RecommendationWidget.cpp  RecommendationWidget.h  Resume.cpp  Resume.h  ResumeFilterWidget.cpp  ResumeFilterWidget.h  ResumeManager.cpp  ResumeManager.h  ResumeWidget.cpp  ResumeWidget.h  User.cpp  User.h  analyzer.cpp  analyzer.h  charts_widget.cpp  charts_widget.h  main.cpp  resume_parser.cpp  resume_parser.h  resume_repository.cpp  resume_repository.h  test_data_generator.cpp  test_data_generator.h
